--- a/frontend-gosquared/src/styles/less/app.less
+++ b/frontend-gosquared/src/styles/less/app.less
@@ -1,2 +1,17 @@
-.app {
+html {
+  height: 100%;
+
+  body {
+    height: 100%;
+
+    #root {
+      height: 100%;
+
+      .app {
+        display: flex;
+        justify-content: center;
+        height: 100%;
+      }
+    }
+  }
 }
