--- a/frontend-gosquared/src/styles/less/app.less
+++ b/frontend-gosquared/src/styles/less/app.less
@@ -11,6 +11,7 @@ html {
         display: flex;
         justify-content: center;
         height: 100%;
+        background-color: #323b42;
       }
     }
   }
