--- a/frontend-gosquared/src/styles/less/auth.less
+++ b/frontend-gosquared/src/styles/less/auth.less
@@ -1,23 +1,80 @@
 .auth-wrapper {
   align-self: center;
-  height: 200px;
+  height: 500px;
   width: 100%;
-  max-width: 200px;
+  max-width: 500px;
   border-radius: 10px;
-  background-color: grey;
+  background-color: #3d4950;
 
   .header {
     display: flex;
     justify-content: center;
+    background-color: white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    height: 80px;
+
+    .image {
+      display: flex;
+      justify-content: center;
+      .logo {
+        align-self: center;
+        border-top-left-radius: 10px;
+        border-top-right-radius: 10px;
+      }
+    }
   }
 
   .content {
     display: flex;
     justify-content: center;
+
+    .form {
+      display: flex;
+      justify-content: center;
+      margin-top: 80px;
+      form {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+
+        input {
+          margin: 10px;
+        }
+
+        .text {
+          width: 200px;
+          border-radius: 5px;
+        }
+
+        .button {
+          margin: 10px auto;
+          background-color: white;
+          color: black;
+          border: none;
+          border-radius: 5px;
+          font: inherit;
+          font-size: 0.9rem;
+          cursor: pointer;
+          outline: inherit;
+        }
+      }
+    }
   }
 
   .switch {
     display: flex;
     justify-content: center;
+
+    button {
+      background: none;
+      color: white;
+      border: none;
+      padding: 0;
+      font: inherit;
+      font-size: 0.9rem;
+      cursor: pointer;
+      outline: inherit;
+    }
   }
 }
