Added: Widgerts in front end and back end db

--- a/frontend-gosquared/src/styles/less/sidedrawer.less
+++ b/frontend-gosquared/src/styles/less/sidedrawer.less
@@ -6,11 +6,15 @@
   .drawer {
     max-width: 100%;
     width: 300px;
-
-    .MuiDrawer-paperAnchorLeft {
-      .widgets {
-        width: 300px;
-      }
-    }
   }
+}
+
+.header {
+  margin: 20px;
+}
+
+.widgets {
+  background-color: #3d4950;
+  color: #e6eff6;
+  height: 100%;
 }
