--- a/frontend-gosquared/src/styles/css/sidedrawer.css
+++ b/frontend-gosquared/src/styles/css/sidedrawer.css
@@ -7,6 +7,11 @@
   max-width: 100%;
   width: 300px;
 }
-.drawer-wrapper .drawer .MuiDrawer-paperAnchorLeft .widgets {
-  width: 300px;
+.header {
+  margin: 20px;
+}
+.widgets {
+  background-color: #3d4950;
+  color: #e6eff6;
+  height: 100%;
 }
