Added: Updates to user config

--- a/frontend-gosquared/src/styles/less/sidedrawer.less
+++ b/frontend-gosquared/src/styles/less/sidedrawer.less
@@ -17,4 +17,9 @@
   background-color: #3d4950;
   color: #e6eff6;
   height: 100%;
+
+  .widget {
+    display: flex;
+    justify-content: space-evenly;
+  }
 }
