--- a/frontend-gosquared/src/styles/less/auth.less
+++ b/frontend-gosquared/src/styles/less/auth.less
@@ -10,9 +10,8 @@
     display: flex;
     justify-content: center;
     background-color: white;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    height: 80px;
+    border-radius: 10px;
+    height: 100px;
 
     .image {
       display: flex;
