Added: Full functionality of dashboard, Adding: Logout functionality next

--- a/frontend-gosquared/src/styles/css/sidedrawer.css
+++ b/frontend-gosquared/src/styles/css/sidedrawer.css
@@ -7,6 +7,9 @@
   max-width: 100%;
   width: 300px;
 }
+.drawer-wrapper .toggle {
+  cursor: pointer;
+}
 .header {
   margin: 20px;
 }
@@ -17,5 +20,17 @@
 }
 .widgets .widget {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  width: 180px;
+  margin: 0 15px 0 15px;
+  cursor: pointer;
+}
+.widgets .widget .active {
+  display: flex;
+  justify-content: center;
+}
+.widgets .logout {
+  display: flex;
+  justify-content: center;
+  cursor: pointer;
 }
