--- a/frontend-gosquared/src/styles/css/app.css
+++ b/frontend-gosquared/src/styles/css/app.css
@@ -11,5 +11,11 @@ html body #root .app {
   display: flex;
   justify-content: center;
   height: 100%;
+  width: 100%;
   background-color: #323b42;
+}
+@media (max-width: 1700px) {
+  html {
+    height: 180%;
+  }
 }
