--- a/frontend-gosquared/src/styles/less/app.less
+++ b/frontend-gosquared/src/styles/less/app.less
@@ -11,8 +11,12 @@ html {
         display: flex;
         justify-content: center;
         height: 100%;
+        width: 100%;
         background-color: #323b42;
       }
     }
+  }
+  @media (max-width: 1700px) {
+    height: 180%;
   }
 }
